exports[`test renders correctly App with default Styled 1`] = `
<div
  className="div-0-8">
  <header
    className="header-0-9">
    <h1
      className="h1-0-10">
      Title
    </h1>
  </header>
  <section
    className="section-0-11">
    <button
      className="button-0-13 button-0-12">
      primitive test
    </button>
    <button
      className="button-0-14 button-0-12">
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-0-15">
    Another section
  </section>
</div>
`;

exports[`test renders correctly App with default styled 1`] = `
<div
  className="div-0-0">
  <header
    className="header-0-1">
    <h1
      className="h1-0-2">
      Title
    </h1>
  </header>
  <section
    className="section-0-3">
    <button
      className="button-0-5 button-0-4">
      primitive test
    </button>
    <button
      className="button-0-6 button-0-4">
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-0-7">
    Another section
  </section>
</div>
`;
